--- a/index.html
+++ b/index.html
@@ -1,39 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Tumbletrick Star</title>
-<style>
-  body {
-    background: url('1.gif') no-repeat center center fixed;
-    background-size: cover;
-    font-family: Arial, sans-serif;
-    color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-  }
-  #results {
-    background: rgba(34, 34, 34, 0.8);
-    border-radius: 6px;
-    box-shadow: 0 0 15px rgba(0, 170, 255, 0.7);
-    padding: 20px;
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-    display: none;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search Movies & TV Shows</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px 20px;
+      background: #121212;
+      color: #eee;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    h1 {
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    #searchBox {
+      width: 100%;
+      max-width: 320px;
+      padding: 0.6rem;
+      font-size: 1.1rem;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+    }
+
+    #results {
+      margin-top: 0.5rem;
+      width: 100%;
+      max-width: 320px;
+      max-height: 500px;
+      overflow-y: auto;
+      background: #222;
+      border-radius: 6px;
+      box-shadow: 0 0 10px #00aaff88;
+    }
+
+    .result-item {
+      display: flex;
+      align-items: center;
+      padding: 8px;
+      cursor: pointer;
+      border-bottom: 1px solid #333;
+      transition: background 0.2s;
+    }
+
+    .result-item:hover {
+      background: #00aaff44;
+    }
+
+    .result-item img {
+      width: 50px;
+      height: 75px;
+      object-fit: cover;
+      border-radius: 3px;
+      margin-right: 12px;
+    }
+
+    .result-info {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .result-title {
+      font-size: 1rem;
+      font-weight: 600;
+      color: #eee;
+    }
+
+    .result-type {
+      font-size: 0.8rem;
+      color: #66ccff;
+      margin-top: 2px;
+    }
+
+    .no-results {
+      padding: 12px;
+      text-align: center;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
 
-<div id="results"></div>
+  <h1>Search Movies & TV Shows</h1>
+  <input type="search" id="searchBox" placeholder="Search..." />
 
-<script src="https://cdn.jsdelivr.net/gh/GGsuii99/tumbletrickstar@main/tumble.js">
- 
-</script>
+  <div id="results"></div>
+
+  <script>
+    const API_KEY = 'e01e2483d3f1206f0ac286e39a8b6188';
+    const IMAGE_BASE_URL = 'https://image.tmdb.org/t/p/w92';
+    const searchBox = document.getElementById('searchBox');
+    const resultsDiv = document.getElementById('results');
+
+    let debounceTimeout;
+
+    searchBox.addEventListener('input', function () {
+      const query = this.value.trim();
+
+      if (debounceTimeout) clearTimeout(debounceTimeout);
+
+      if (query.length < 2) {
+        resultsDiv.innerHTML = '';
+        return;
+      }
+
+      debounceTimeout = setTimeout(() => {
+        searchAll(query);
+      }, 300);
+    });
+
+    async function searchAll(query) {
+      resultsDiv.innerHTML = '<div class="no-results">Searching...</div>';
+
+      try {
+        const movieUrl = `https://api.themoviedb.org/3/search/movie?api_key=${API_KEY}&query=${encodeURIComponent(query)}`;
+        const tvUrl = `https://api.themoviedb.org/3/search/tv?api_key=${API_KEY}&query=${encodeURIComponent(query)}`;
+
+        const [movieRes, tvRes] = await Promise.all([fetch(movieUrl), fetch(tvUrl)]);
+        const [movieData, tvData] = await Promise.all([movieRes.json(), tvRes.json()]);
+
+        const movies = movieData.results || [];
+        const tvShows = tvData.results || [];
+
+        if (movies.length === 0 && tvShows.length === 0) {
+          resultsDiv.innerHTML = '<div class="no-results">No results found.</div>';
+          return;
+        }
+
+        resultsDiv.innerHTML = '';
+
+        function createItem(item, type) {
+          const div = document.createElement('div');
+          div.className = 'result-item';
+
+          const posterPath = item.poster_path ? IMAGE_BASE_URL + item.poster_path : '';
+          const img = document.createElement('img');
+          img.src = posterPath || 'https://via.placeholder.com/50x75?text=No+Image';
+          img.alt = item.title || item.name;
+
+          const info = document.createElement('div');
+          info.className = 'result-info';
+
+          const title = document.createElement('div');
+          title.className = 'result-title';
+          title.textContent = item.title || item.name;
+
+          const typeLabel = document.createElement('div');
+          typeLabel.className = 'result-type';
+          typeLabel.textContent = type === 'movie' ? 'Movie' : 'TV Show';
+
+          info.appendChild(title);
+          info.appendChild(typeLabel);
+          div.appendChild(img);
+          div.appendChild(info);
+
+          div.addEventListener('click', () => {
+            const tmdbId = item.id;
+            const name = (item.title || item.name).toLowerCase()
+              .replace(/[^a-z0-9\s-]/g, '')
+              .trim()
+              .replace(/\s+/g, '-');
+
+            const url = `https://iframe.pstream.org/media/tmdb-${type}-${tmdbId}-${name}`;
+            window.location.href = url;
+          });
+
+          return div;
+        }
+
+        movies.forEach(m => resultsDiv.appendChild(createItem(m, 'movie')));
+        tvShows.forEach(t => resultsDiv.appendChild(createItem(t, 'tv')));
+
+      } catch (err) {
+        resultsDiv.innerHTML = `<div class="no-results">Error: ${err.message}</div>`;
+      }
+    }
+  </script>
 
 </body>
 </html>
